--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
-    --cor-de-fundo : #EBECEE 
+    --cor-de-fundo : #EBECEE;
 }
 body{
-    background-color: #EBECEE; var:(--cor-de-fundo)
+    background-color: white;
+
 }
