--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@
     --cor-de-fundo : #EBECEE;
 }
 body{
-    background-color: white;
 
+    background-color: var(--cor-de-fundo)
+} 
+
+h1{
+     background-color: white;
 }
+           
+        }
