--- a/styles/teste.css
+++ b/styles/teste.css
@@ -11,9 +11,9 @@
     background-repeat: no-repeat;
     background-position: center;
 }
-
 .cabeçalho {
     background-color: var(--branco);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-
-
