--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
-:root {
-    --cor-de-fundo: #EBECEE;
+@import url( "styles/header.css");
+:root{
+    --cor-defundo: #ebecee; 
+    --branco: #FFFFFF;
+
 }
 
-body {
+body{
+    background-color: var(--cor-defundo);
 
-    background-color: var(--cor-de-fundo)
 }
 
-h1 {
-    background-color: white;
+h1{ 
+    background-color:  white;
+    
 }
