--- a/styles/header.css
+++ b/styles/header.css
@@ -1,19 +1,25 @@
-:root {
-    --cor-de-fundo: #EBECEE;
-    --branco: #FFFFFF;
-}
-
-.cabeçalho_menu-hamburguer {
+.cabeçalho__menu-hamburguer{
     width: 24px;
     height: 24px;
+    background-image: url("..img/menu.svg");
     display: inline-block;
-    background-image: url("../img/Menu.svg");
     background-repeat: no-repeat;
     background-position: center;
+
 }
-.cabeçalho {
+
+-.cabecalho{
     background-color: var(--branco);
     display: flex;
     justify-content: space-between;
+    position: relative;
+    
+}
+.container{
+    display: flex;
     align-items: center;
+}
+
+.container__botao:checked~.lista-menu{
+    display: block;
 }
