--- a/styles/header.css
+++ b/styles/header.css
@@ -7,14 +7,14 @@
     background-position: center;
 }
 
-.cabecalho{
+.cabecalho {
     background-color: var(--cor-defundo);
-    display: flexbox;
+    display: flex;
     justify-content: ;
     position: relative;
 }
 
-.container{
+.container {
     display: flex;
     align-items: center;
 }
