--- a/styles/header.css
+++ b/styles/header.css
@@ -1,24 +1,34 @@
-.cabeçalho__menu-hamburguer {
+.cabecalho__menu-hamburger{
     width: 24px;
     height: 24px;
     background-image: url("../img/Menu.svg");
     display: inline-block;
     background-repeat: no-repeat;
     background-position: center;
+
 }
 
-.cabecalho {
-    background-color: var(--cor-defundo);
+.cabecalho{
+    background-color: var(--branco);
     display: flex;
-    justify-content: ;
+    justify-content: space-between;
     position: relative;
 }
 
-.container {
+.container{
     display: flex;
     align-items: center;
 }
 
-.container__botao:checked~.lista-menu {
-    display: block;
+.cabecalho__imagem{
+    padding: 1em;
 }
+
+.lista-menu{
+    display: none;
+    position: absolute;
+    top: 100%;
+}
+
+.container__botao:checked~.lista-menu{
+    display: block;
