--- a/styles/header.css
+++ b/styles/header.css
@@ -2,7 +2,8 @@
     width: 24px;
     height: 24px;
     background-image: url("../img/Menu.svg");
-    display: inline-block;
+    display: flex;
+    justify-content: space-between;
     background-repeat: no-repeat;
     background-position: center;
 
