--- a/styles/header.css
+++ b/styles/header.css
@@ -1,10 +1,11 @@
-.cabeçalho__menu-hamburguer {
+cabecalho__menu-hamburger{
     width: 24px;
     height: 24px;
     background-image: url("../img/Menu.svg");
     display: inline-block;
     background-repeat: no-repeat;
     background-position: center;
+
 }
 
 .cabecalho{
@@ -19,6 +20,17 @@
     align-items: center;
 }
 
-.container__botao:checked~.lista-menu {
+.cabecalho__imagem{
+    padding: 1em;
+}
+
+.lista-menu{
+    display: none;
+    position: absolute;
+    top: 100%;
+}
+
+.container__botao:checked~.lista-menu{
     display: block;
 }
+
