--- a/styles/header.css
+++ b/styles/header.css
@@ -1,11 +1,10 @@
-cabecalho__menu-hamburger{
+.cabecalho__menu-hamburger{
     width: 24px;
     height: 24px;
     background-image: url("../img/Menu.svg");
     display: inline-block;
     background-repeat: no-repeat;
     background-position: center;
-
 }
 
 .cabecalho{
