--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
 :root {
     --cor-de-fundo: #EBECEE;
     --branco:#ffffff; 
+    --laranja:  #FECD2F;
+    --azul-degrade:linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
 
 }
 
