--- a/styles/header.css
+++ b/styles/header.css
@@ -32,3 +32,10 @@
 .container__botao:checked~.lista-menu {
     display: block;
 }
+
+.lista-menu__titulo, menuitem{
+    padding: 1em;
+    background-color: var(--branco);
+}
+
+}
