--- a/styles/header.css
+++ b/styles/header.css
@@ -27,16 +27,20 @@
     display: none;
     position: absolute;
     top: 100%;
+    width: ;
 }
 
 .container__botao:checked~.lista-menu {
     display: block;
 }
 
-.lista-menu__titulo, .lista-menu__item{
+.lista-menu__titulo, lista-menu__item{
     padding: 1em;
     background-color: var(--branco);
 }
 .lista-menu__link{
-    background:var(--azul);
+    background:var();
+    -webkit-background-clip: text;
+    -webkit-text:tranparente;
+    background-clip: text;
 }
