--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 @import url("styles/header.css");
-
+@import url("styles/banners.css");
 :root {
     --cor-de-fundo: #EBECEE;
     --branco:#ffffff; 
     --laranja:  #FECD2F;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+    --fonte-principal: "poppins"
 
 }
 
@@ -13,6 +14,8 @@ body {
     background-color: var(--cor-de-fundo)
 }
 
-h1 {
-    background-color: white;
+.body{
+    
+background-color: var(--cor-de-fundo)
+font famyly
 }
