--- a/styles/banners.css
+++ b/styles/banners.css
@@ -16,7 +16,7 @@
 }
 
 .banner__pesquisa{
-    background-attachment: tranparent;
+    background-attachment: transparent;
     border:1px solid var(--branco)
     color:var(--branco);
     border-radius: 24px;
