--- a/styles/banners.css
+++ b/styles/banners.css
@@ -1,8 +1,8 @@
 .banners{
     background-color: var(--azul-degrade);
-    color:var(--branco);
+    color: var(--branco);
     text-align: center;
-    pading:2,5em 2em;
+    padding: 2.5em 2em;
 }
 
 .banners__titulo{
@@ -16,11 +16,10 @@
 }
 
 .banner__pesquisa{
-    background-attachment: transparent;
-    border:1px solid var(--branco)
+    background-color: transparent;
+    border: 1px solid var(--branco)
     color:var(--branco);
     border-radius: 24px;
-    pading:1em;
+    padding:1em;
     width:100%;
-
 }
