--- a/styles/banners.css
+++ b/styles/banners.css
@@ -17,9 +17,9 @@
 
 .banner__pesquisa{
     background-color: transparent;
-    border: 1px solid var(--branco)
+    border: 1px solid var(--branco);
     color:var(--branco);
     border-radius: 24px;
-    padding:1em;
-    width:100%;
+    padding:1em 0;
+    width: 100 %;
 }
