--- a/styles/banner.css
+++ b/styles/banner.css
@@ -1,5 +1,5 @@
 .banner{
-    background-color: var(--azul-degrade);
+    background: var(--azul-degrade);
     color: var(--branco);
     text-align: center;
     padding: 2.5em 2em;
@@ -21,5 +21,5 @@
     color:var(--branco);
     border-radius: 24px;
     padding:1em 0;
-    width: 100 %;
+    width: 100%;
 }
