--- a/styles/banner.css
+++ b/styles/banner.css
@@ -1,4 +1,4 @@
-.banner{
+.baner{
     background: var(--azul-degrade);
     color: var(--branco);
     text-align: center;
@@ -20,6 +20,6 @@
     border: 1px solid var(--branco);
     color:var(--branco);
     border-radius: 24px;
-    padding:1em 0;
+    padding:1em;
     width: 100%;
 }
