--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@
 @import url("styles/banner.css");
 
 :root {
+
     --cor-de-fundo: #EBECEE;
     --branco:#ffffff; 
     --laranja:  #eb9e00;
-    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+    --azul-degrade:(linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%));
     --fonte-principal: "poppins"
-
 }
 
 body {
