--- a/styles/banner.css
+++ b/styles/banner.css
@@ -1,5 +1,5 @@
 .baner{
-    background: var(--azul-degrade);
+    background: var( --azul-degradede);
     color: var(--branco);
     text-align: center;
     padding: 2.5em 2em;
