--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url("styles/header.css");
+@import url("styles/banner.css");
 
 :root {
     --cor-defundo: #ebecee;
@@ -7,10 +8,9 @@
 
 body {
     background-color: var(--cor-defundo);
-
+    
 }
 
 h1 {
     background-color: white;
-
 }
