--- a/styles/banner.css
+++ b/styles/banner.css
@@ -1,5 +1,5 @@
 .banner{
-    background: var(--azul);
+    background: var(--azul-degrade));
     color: var(--branco);
     text-align: center;
     padding: 5.5em 2em;
