--- a/styles/header.css
+++ b/styles/header.css
@@ -31,7 +31,7 @@
 }
 
 .container__botao:checked~.lista-menu {
-    display: block;
+    display: none;
 }
 
 .lista-menu__titulo, lista-menu__item{
