--- a/style.css
+++ b/style.css
@@ -16,3 +16,13 @@ body {
     font-weight: 400;
 }
 
+.banner__pesquisa: :placeholder{
+
+    font-family: var(--fonte-principal);
+    font-size: 14px;
+    font-weight: 400;
+    text-align:center;
+    color: var(--branco);
+    background:url("..img/lupa.svg") no-repeat;
+    background-position: 1em;
+}
