--- a/styles/header.css
+++ b/styles/header.css
@@ -45,3 +45,13 @@
     background-clip: text;
     text-transform: uppercase;
 }
+
+.banner__pesquisa: :placeholder{
+
+    font-family: var(--fonte-principal);
+    font-size: 14px;
+    font-weight: 400;
+    text_align:center
+
+};
+
