--- a/style.css
+++ b/style.css
@@ -15,3 +15,14 @@ body {
     font-size: 16px;
     font-weight: 400;
 }
+
+.banner__pesquisa: :placeholder{
+
+    font-family: var(--fonte-principal);
+    font-size: 14px;
+    font-weight: 400;
+    text-align:center;
+    color: var(--branco);
+    background:url("..img/lupa.svg") no-repeat;
+    background-position: 1em;
+}
