--- a/style.css
+++ b/style.css
@@ -4,25 +4,13 @@
 :root {
     --cor-de-fundo: #EBECEE;
     --branco:#ffffff; 
-    --laranja:  #eb9e00;
+    --laranja:#FECD2F;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --fonte-principal: "poppins"
-}
 
 body {
     background-color: var(--cor-de-fundo);
     font-family: var(--fonte-principal);
     font-size: 16px;
     font-weight: 400;
-}
-
-.banner__pesquisa: :placeholder{
-
-    font-family: var(--fonte-principal);
-    font-size: 14px;
-    font-weight: 400;
-    text-align:center;
-    color: var(--branco);
-    background:url("..img/lupa.svg") no-repeat;
-    background-position: 1em;
 }
