--- a/styles/banner.css
+++ b/styles/banner.css
@@ -1,8 +1,8 @@
 .banner{
-        background: var(--azul-degrade);
-        color: var(--branco);
-        text-align: center;
-        padding: 2.5em  2em;
+    background: var(--azul-degrade);
+    color: var(--branco);
+    text-align: center;
+    padding: 2.5em 2em;
 }
 
 .banner__titulo{
@@ -17,20 +17,20 @@
 
 .banner__pesquisa{
     background-color: transparent;
-    border: 5px solid var(--branco);
+    border: 1px solid var(--branco);
     color:var(--branco);
     border-radius: 24px;
-    padding: 1em;
+    padding:1em;
     width: 100%;
 }
 
-.banner__pesquisa: :placeholder{
-
-    font-family: var(--fonte-principal);
-    font-size: 14px;
-    font-weight: 400;
-    text-align:center;
+.banner__pesquisa::placeholder{
+    font-family: var("--fonte-principal");
+    font: size 18px;
+    font-weight: 500;
+    text-align: center;
     color: var(--branco);
-    background:url("") no-repeat;
-    background-position: 1em;
+    background: url(../img/Pesquisa.svg) no-repeat;
+    background-position: 0,5em;
+
 }
