--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     --branco:#ffffff; 
     --laranja:#FECD2F;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
-    --fonte-principal: "poppins"
+    --fonte-principal: "poppins";
 
 body {
     background-color: var(--cor-de-fundo);
