--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -1,6 +1,6 @@
 .carrossel__titulo {
   color: var(--laranja);
-  background-color: var(--branco));
+  background-color: var(--branco);
   text-align: center;
   text-transform: uppercase;
   font-size: 18px;
