--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -8,7 +8,7 @@
 .topicos__titulos{
     color: var(--branco);
     font-weight: 300
-    margin botton: 1em
+    margin botton: 1em;
 }
 
 .topicos__link{
