--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -5,7 +5,7 @@
     padding 1em  0;
 }
 
-.topicos__titulos{
+.topico__titulos{
     color: var(--branco);
     font-weight: 300
     margin botton: 1em;
