--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -1,6 +1,6 @@
 
 .topicos{
-    background-color: var(--azul-degrade)
+    background-color: var(--azul-degrade);
     text align: center; 
     padding 1em  0;
 }
