--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -1,7 +1,7 @@
 
 .topicos{       
     background: var(--azul-degrade);
-    color: var(--laranja);
+    color: var(--branco);
     text-align: center;
     padding: 1em 0em;
 }
