--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -9,12 +9,12 @@
 .topicos__itens{
     color: var(--branco);
     font-weight: 300
-    margin-bottom: 1em;
+    margin-bottom: 1em 2em;
 }
 
 .topicos__link{
     color: var(--branco);
-    padding: 1em;
+    padding: 1em 0,5em;
     font-size: 14px;
     font-weight: 700;
     text-decoration: nome;
