--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -1,22 +1,30 @@
-
-.topicos{       
+.topicos{
     background: var(--azul-degrade);
-    color: var(--branco);
     text-align: center;
-    padding: 1em 0em;
+    padding: 1em 0;
 }
 
-.topicos__itens{
+.topicos__titulo{
     color: var(--branco);
-    font-weight: 300
-    margin-bottom: 1em 2em;
+    font-weight: 300;
+    margin-bottom: 1em;
+}
+
+.topicos__lista{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .topicos__link{
     color: var(--branco);
-    padding: 1em 0,5em;
-    font-size: 18px;
+    padding: 1em;
+    background-color: var(--laranja);
+    font-size: 14px;
     font-weight: 700;
-    text-decoration: nome;
-    
+    text-decoration: none;
+}
+
+.topicos__itens{
+    margin: 3em 1em;
 }
