--- a/styles/banner.css
+++ b/styles/banner.css
@@ -18,19 +18,18 @@
 .banner__pesquisa{
     background-color: transparent;
     border: 1px solid var(--branco);
-    color:var(--branco);
+    color: var(--branco);
     border-radius: 24px;
-    padding:1em;
+    padding: 1em;
     width: 100%;
 }
 
 .banner__pesquisa::placeholder{
-    font-family: var("--fonte-principal");
-    font: size 14px;
-    font-weight: 500;
+    font-family: var(--fonte-principal);
+    font-size: 14px;
+    font-weight: 400;
     text-align: center;
     color: var(--branco);
-    background: url(../img/Pesquisa.svg) no-repeat;
-    background-position: 0,5em;
-
+    background: url("../img/Pesquisa.svg") no-repeat;
+    background-position: 1em;
 }
