--- a/styles/contatos.css
+++ b/styles/contatos.css
@@ -1,24 +1,24 @@
 .contato {
     background: var(--branco);
-    padding:1em;
+    padding: 1em;
 }
 
-.contato__titulo{
-    font-size:18px;
+.contato__titulo {
+    font-size: 18px;
     font-weight: 500;
-    }
+}
 
-    .contato__texto{
-        font-weight:300;
-        margin: 1em 0;
-        }
+.contato__texto {
+    font-weight: 300;
+    margin: 1em 0;
+}
 
 .contato__titulo,
 .contato__texto {
-background:var(--azul-degrade);
--webkit-background-clip: text;
--webkit-text-fill-color:transparent;
-background-clip: text;
+    background: var(--azul-degrade);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
 }
 
 .contato__email {
@@ -27,14 +27,11 @@ background-clip: text;
     border-radius: 24px;
     width: 90%;
     color: var(--azul);
-    }
+}
 
-    .contato__email::placeholder {
-        font-family: var(--fonte-principal);
-        color: var(--azul);
-        background: url("../img/Email.svg")
-        no-repeat;
-        padding-left: 2em;
-        }
-
-        
+.contato__email::placeholder {
+    font-family: var(--fonte-principal);
+    color: var(--azul);
+    background: url("../img/Email.svg") no-repeat;
+    padding-left: 2em;
+}
