--- a/styles/header.css
+++ b/styles/header.css
@@ -61,6 +61,7 @@
     font-family: var(--fonte-secundaria);
     font-size: 30px;
     font-weight: 400;
+    display: block;
     }
     .container__titulo--negrito{
     font-weight: 700;
