--- a/styles/header.css
+++ b/styles/header.css
@@ -8,7 +8,7 @@
 }
 
 .cabecalho{
-    background-color: var(--branco);
+    background-color: var(--azul-degrade));
     display: flex;
     justify-content: space-between;
     position: relative;
