--- a/styles/header.css
+++ b/styles/header.css
@@ -1,69 +1,35 @@
-.cabecalho__menu-hamburger{
+.cabeçalho__menu-hamburguer {
     width: 24px;
     height: 24px;
-    background-image: url("../img/Menu.svg");
     display: inline-block;
+    background-image: url("../img/Menu.svg");
     background-repeat: no-repeat;
-    background-position: center;  
+    background-position: center;
 }
 
-.cabecalho{
-    background-color: var(--azul-degrade));
+.cabeçalho {
+    background-color: var(--branco);
     display: flex;
     justify-content: space-between;
+    align-items: center;
     position: relative;
 }
 
-.container{
+.container {
     display: flex;
     align-items: center;
 }
 
-.cabecalho__imagem{
+.container__imagem {
     padding: 1em;
 }
 
-.lista-menu{
+.lista-menu {
     display: none;
     position: absolute;
-    top: 100%;
-    width: 60vw;
+    top:100%;
 }
 
-.container__botao:checked~.lista-menu{
+.container__botao:checked ~ .lista-menu {
     display: block;
 }
-
-.lista-menu__titulo, .lista-menu__item{
-    padding: 1em;
-    background-color: var(--branco);
-}
-
-.lista-menu__titulo{
-    color: var(--laranja);    
-}
-
-.lista-menu__link{
-    background: var(--azul-degrade);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    text-transform: uppercase;
-
-}
-
-.container__titulo{
-    display: none;
-    
-    }
-    
-    @media screen and (min-width: 1024px){
-    .container__titulo{
-    font-family: var(--fonte-secundaria);
-    font-size: 30px;
-    font-weight: 400;
-    display: block;
-    }
-    .container__titulo--negrito{
-    font-weight: 700;
-    }
