--- a/styles/header.css
+++ b/styles/header.css
@@ -8,7 +8,7 @@
 }
 
 .cabecalho{
-    background-color: var(--azul-degrade));
+    background-color: var(--branco);
     display: flex;
     justify-content: space-between;
     position: relative;
@@ -51,19 +51,3 @@
     text-transform: uppercase;
 
 }
-
-.container__titulo{
-    display: none;
-    
-    }
-    
-    @media screen and (min-width: 1024px){
-    .container__titulo{
-    font-family: var(--fonte-secundaria);
-    font-size: 30px;
-    font-weight: 400;
-    display: block;
-    }
-    .container__titulo--negrito{
-    font-weight: 700;
-    }
