--- a/styles/header.css
+++ b/styles/header.css
@@ -51,3 +51,17 @@
     text-transform: uppercase;
 
 }
+
+@media screen and (min-width: 1024px){
+
+.opcoes{
+    display: flex;
+}
+.opcoes__item{
+    padding:2em;
+    text-transform: uppercase;
+ }
+.opcoes__link{
+    text-decoration: none;
+    color: var(--preto);
+}
