--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     --laranja:  #FECD2F;
     --azul-degrade:linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --azul:#002F52;
+    --preto:#000000;
     --fonte-principal:"poppins";
     --fonte-secundaria:"josefins sans"
 }
