--- a/styles/header.css
+++ b/styles/header.css
@@ -53,18 +53,11 @@
 }
 
 @media screen and (min-width: 1024px){
-
-.opcoes{
-    display: flex;
-}
-.opcoes__item{
-    padding:2em;
-    text-transform: uppercase;
- }
-.opcoes__link{
-    text-decoration: none;
-    color: var(--preto);
-}
-.opcoes{
-    display: none;
-}
+    .container__titulo{
+    font-family: var(--fonte-secundaria);
+    font-size: 30px;
+    font-weight: 400;
+    }
+    .container__titulo--negrito{
+    font-weight: 700;
+    }
