--- a/styles/header.css
+++ b/styles/header.css
@@ -55,24 +55,13 @@
     display: none;
 
 @media screen and (min-width: 1024px){
-    .container__titulo
+    .container__titulo{
     font-family: var(--fonte-secundaria);
     font-size: 30px;
     font-weight: 400;
     display: block;
 }
-.container__titulo--negrito{
+    .container__titulo--negrito{
     font-weight: 700;
     }
-
-.opcoes{
-        display: flex;
-        }
-        .opcoes__item{
-        padding:2em;
-        text-transform: uppercase;
-        }
-        .opcoes__link{
-        text-decoration: none;
-        color: var(--preto);
-        }
+    
