--- a/styles/header.css
+++ b/styles/header.css
@@ -65,3 +65,15 @@
     font-weight: 700;
     }
     
+    @media screen and (min-width: 1024px){
+        .opcoes{
+        display: flex;
+        }
+        .opcoes__item{
+        padding:2em;
+        text-transform: uppercase;
+        }
+        .opcoes__link{
+        text-decoration: none;
+        color: var(--preto);
+        }
