--- a/styles/header.css
+++ b/styles/header.css
@@ -81,4 +81,7 @@
         text-decoration: none;
         color: var(--preto);
         }
-        
+
+.container__imagem-transparente{
+            display: none;
+        }
