--- a/styles/header.css
+++ b/styles/header.css
@@ -85,3 +85,9 @@
 .container__imagem-transparente{
             display: none;
         }
+
+        .cabecalho__menu-hamburguer{
+            display: none;
+            }
+
+            
