--- a/styles/header.css
+++ b/styles/header.css
@@ -117,9 +117,11 @@
 .opcoes {
     margin-right: auto;
 
-
+@media screen {
+    
+}
 @media screen and (min-width: 1728px) {
-    .container__texto {
-     display: block;
+.container__texto {
+    display: block;
 }
 }
