--- a/styles/header.css
+++ b/styles/header.css
@@ -1,123 +1,53 @@
-.cabecalho__menu-hamburger {
+.cabecalho__menu-hamburger{
     width: 24px;
     height: 24px;
     background-image: url("../img/Menu.svg");
     display: inline-block;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center;  
 }
 
-.cabecalho {
+.cabecalho{
     background-color: var(--branco);
     display: flex;
     justify-content: space-between;
     position: relative;
 }
 
-.container {
+.container{
     display: flex;
     align-items: center;
 }
 
-.cabecalho__imagem {
+.cabecalho__imagem{
     padding: 1em;
 }
 
-.lista-menu {
+.lista-menu{
     display: none;
     position: absolute;
     top: 100%;
     width: 60vw;
 }
 
-.container__botao:checked~.lista-menu {
+.container__botao:checked~.lista-menu{
     display: block;
 }
 
-.lista-menu__titulo,
-.lista-menu__item {
+.lista-menu__titulo, .lista-menu__item{
     padding: 1em;
     background-color: var(--branco);
 }
 
-.lista-menu__titulo {
-    color: var(--laranja);
+.lista-menu__titulo{
+    color: var(--laranja);    
 }
 
-.lista-menu__link {
+.lista-menu__link{
     background: var(--azul-degrade);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
     text-transform: uppercase;
 
-}
-
-.container__titulo {
-    display: none;
-
-.container__texto {
-    display: none;
-    }
-
-@media screen and (min-width: 1024px) {
-
-.container__titulo {
-             font-family: var(--fonte-secundaria);
-            font-size: 30px;
-            font-weight: 400;
-            display: block;
-        }
-
-.container__titulo--negrito {
-            font-weight: 700;
-        }
-
-.opcoes {
-            display: none;
-        }
-
-@media screen and (min-width: 1024px) {
-
-.opcoes {
-    display: flex;
-}
-
-.opcoes__item {
-                 padding: 2em;
-                text-transform: uppercase;
-            }
-
-.opcoes__link {
-    text-decoration: none;
-    color: var(--preto);
-}
-
-.container__imagem-transparente {
-    display: none;
-}
-
-.cabecalho__menu-hamburguer {
-    display: none;
-}
-}
-           
- @media screen and (min-width: 1728px) {
-.container__link {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    color: var(--preto);
-}
-
-.cabecalho {
-    padding: 0 2em;
-}
-
-.opcoes {
-    margin-right: auto;
-}
-@media screen and (min-width: 1728px) {
-.container__texto {
-    display: block;
 }
