--- a/styles/header.css
+++ b/styles/header.css
@@ -52,6 +52,9 @@
 
 }
 
+.container__titulo{
+    display: none;
+    }
 @media screen and (min-width: 1024px){
     .container__titulo{
     font-family: var(--fonte-secundaria);
