--- a/style.css
+++ b/style.css
@@ -1,15 +1,17 @@
 @import url("styles/header.css");
 @import url("styles/banner.css");
 @import url("styles/topicos.css");
-@import url(styles/contatos.css);
+@import url("styles/contatos.css`");
 
 :root{
     --cor-de-fundo: #EBECEE;
     --branco: #FFFFFF;
     --laranja:  #FECD2F;
     --azul-degrade:linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+    --preto: #000000;   
     --fonte-principal:"poppins";
     --fonte-secundaria: "Josefin Sans";
+
 }
 
 body{
