--- a/styles/header.css
+++ b/styles/header.css
@@ -74,3 +74,14 @@
     font-weight: 700;
     }
     }
+
+    @media screen and (min-width: 1024px){
+        .container__titulo{
+        font-family: var(--fonte-secundaria);
+        font-size: 30px;
+        font-weight: 400;
+        }
+        .container__titulo--negrito{
+        font-weight: 700;
+        }
+        }
