--- a/styles/header.css
+++ b/styles/header.css
@@ -87,4 +87,16 @@
         .container__imagem{
             display: none;
         }
+        .opcoes{
+            display: flex;
+            }
+            .opcoes__item{
+            padding:2em;
+            text-transform: uppercase;
+            }
+            .opcoes__link{
+            text-decoration: none;
+            color: var(--preto);
+            }
+            }
         }
