--- a/styles/header.css
+++ b/styles/header.css
@@ -70,18 +70,8 @@
     font-weight: 400;
     display: block;
     }
-    .container__titulo--negrito{
-    font-weight: 700;
-    }
-    }
-
-    @media screen and (min-width: 1024px){
-        .container__titulo{
-        font-family: var(--fonte-secundaria);
-        font-size: 30px;
-        font-weight: 400;
-        }
-        .container__titulo--negrito{
+    
+       .container__titulo--negrito{
         font-weight: 700;
         }
         .container__imagem{
@@ -98,5 +88,7 @@
             text-decoration: none;
             color: var(--preto);
             }
+            .cabecalho__menu-hamburguer{
+                display: none;
             }
-        }
+       
