--- a/styles/header.css
+++ b/styles/header.css
@@ -99,6 +99,8 @@
                     width: auto;
                     }
 
-                    }
+                .opcoes__botao{
+                    display: none;
+                }
             }
        
