--- a/styles/header.css
+++ b/styles/header.css
@@ -1,52 +1,54 @@
-.cabecalho__menu-hamburger{
+.cabecalho__menu-hamburger {
     width: 24px;
     height: 24px;
     background-image: url("../img/Menu.svg");
     display: inline-block;
     background-repeat: no-repeat;
-    background-position: center;  
+    background-position: center;
 }
 
-.cabecalho{
+.cabecalho {
     background-color: var(--branco);
     display: flex;
     justify-content: space-between;
     position: relative;
 }
 
-.container{
+.container {
     display: flex;
     align-items: center;
 }
 
-.container__botao{
+.container__botao {
     display: none;
 }
 
-.cabecalho__imagem{
+.cabecalho__imagem {
     padding: 1em;
 }
 
-.lista-menu{
+.lista-menu {
     display: none;
     position: absolute;
     top: 100%;
     width: 60vw;
 }
 
-.container__botao:checked~.lista-menu{
+.container__botao:checked~.lista-menu {
     display: block;
 }
-.lista-menu__titulo, .lista-menu__item{
+
+.lista-menu__titulo,
+.lista-menu__item {
     padding: 1em;
     background-color: var(--branco);
 }
 
-.lista-menu__titulo{
-    color: var(--laranja);    
+.lista-menu__titulo {
+    color: var(--laranja);
 }
 
-.lista-menu__link{
+.lista-menu__link {
     background: var(--azul-degrade);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -55,66 +57,75 @@
 
 }
 
-.container__titulo{
+.container__titulo {
     display: none;
 }
 
-.opcoes{
+.opcoes {
     display: none;
 }
 
-@media screen and (min-width: 1024px){
-    .container__titulo{
-    font-family: var(--fonte-secundaria);
-    font-size: 30px;
-    font-weight: 400;
-    display: block;
+@media screen and (min-width: 1024px) {
+    .container__titulo {
+        font-family: var(--fonte-secundaria);
+        font-size: 30px;
+        font-weight: 400;
+        display: block;
     }
-    
-       .container__titulo--negrito{
+
+    .container__titulo--negrito {
         font-weight: 700;
-        }
-        .container__imagem{
-            display: none;
-        }
-        .opcoes{
-            display: flex;
-            }
-            .opcoes__item{
-            padding:2em;
-            text-transform: uppercase;
-            }
-            .opcoes__link{
-            text-decoration: none;
-            color: var(--preto);
-            }
-            .container__imagem-transparente{
-                display:none;
-            }
-            .cabecalho__menu-hamburguer{
-                display: none;}
+    }
 
-                .opcoes__botao:checked~.lista-menu{
-                    display: block;
-                    width: auto;
-                    }
+    .container__imagem {
+        display: none;
+    }
 
-                .opcoes__botao{
-                    display: none;
-                }
-            }
-       
-            @media screen and (min-width: 1728px) {
-                .container__link{
-                display: flex;
-                align-items: center;
-                text-decoration: none;
-                color: var(--preto);
-                }
-                .cabecalho{
-                padding: 0 2em;
-                }
-                .opcoes{
-                margin-right: auto;
-                }
-                }
+    .opcoes {
+        display: flex;
+    }
+
+    .opcoes__item {
+        padding: 2em;
+        text-transform: uppercase;
+    }
+
+    .opcoes__link {
+        text-decoration: none;
+        color: var(--preto);
+    }
+
+    .container__imagem-transparente {
+        display: none;
+    }
+
+    .cabecalho__menu-hamburguer {
+        display: none;
+    }
+
+    .opcoes__botao:checked~.lista-menu {
+        display: block;
+        width: auto;
+    }
+
+    .opcoes__botao {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 1728px) {
+    .container__link {
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: var(--preto);
+    }
+
+    .cabecalho {
+        padding: 0 2em;
+    }
+
+    .opcoes {
+        margin-right: auto;
+    }
+}
