--- a/styles/header.css
+++ b/styles/header.css
@@ -128,4 +128,11 @@
     .opcoes {
         margin-right: auto;
     }
+
+    .container__texto {
+        display: none;
+      }
+      .container__texto {
+        display: block;
+      }
 }
