--- a/styles/header.css
+++ b/styles/header.css
@@ -135,4 +135,8 @@
       .container__texto {
         display: block;
       }
-}
+      .cabecalho{
+        space-between;
+        position: relative;
+      }: 
+    }
