--- a/styles/header.css
+++ b/styles/header.css
@@ -132,7 +132,7 @@
     .container__texto {
         display: none;
       }
-      .container__imagem {
+      .container__texto {
         display: block;
       }
       .cabecalho{
