--- a/styles/header.css
+++ b/styles/header.css
@@ -22,7 +22,9 @@
 .container__botao {
     display: none;
 }
-
+.container__texto {
+    display: block;
+    
 .cabecalho__imagem {
     padding: 1em;
 }
@@ -135,8 +137,4 @@
       .container__texto {
         display: block;
       }
-      .cabecalho{
-        space-between;
-        position: relative;
-      }: 
-    }
+          }
