--- a/styles/header.css
+++ b/styles/header.css
@@ -136,5 +136,8 @@
       .container__texto {
         display: block;
       }
-      
+      .cabecalho{
+        space-between;
+        position: relative;
+      }
     }
